--- a/webpage/achievement.css
+++ b/webpage/achievement.css
@@ -34,3 +34,22 @@ footer {
     color:#ffffff;
     font-size: 30px;
 }
+.slideshow-container {
+    width: 500px;
+    height: 300px;
+    overflow: hidden;
+    position: relative;
+}
+
+.slide {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
+
+.active {
+    opacity: 1;
+}
+
