--- a/webpage/history.css
+++ b/webpage/history.css
@@ -4,12 +4,53 @@
                 background-repeat: no-repeat;
                 background-position: center;
                 background-size: cover;
+               
+            }
+            #click{
+                color:black;
+                background-color:white;
+                margin: 50px;
+                font-size: 30px;
             }
             .first h1{
                 color:#0000ff;
             }
             .first p{
-                color:white;
+                color:crimson;
+                font-size: 30px;
+            }
+            .one{
+                background-color: #dddddd91;
+            }
+            .two{
+                background-color: #dddddd91;
+
+            }
+            .three{
+                background-color: #dddddd91;
+
+            }
+            .four{
+                background-color: #dddddd91;
+
+            }
+            slideshow-container {
+                width: 200px;
+                height: 300px;
+                overflow: hidden;
+                position: relative;
+            }
+            
+            .slide {
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                opacity: 0;
+                transition: opacity 1s ease-in-out;
+            }
+            
+            .active {
+                opacity: 1;
             }
 
             .explore-container {
@@ -18,7 +59,6 @@
             padding: 20px;
             border: 1px solid #ddd;
             border-radius: 10px;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
             background-color: rgba(216, 208, 208, 0.918);
         }
         .explore-button {
