--- a/webpage/home.css
+++ b/webpage/home.css
@@ -8,11 +8,12 @@ body {
 
 background-repeat: no-repeat; /* Prevents the image from repeating */
 background-attachment: fixed; /* Keeps the image fixed while scrolling */
+overflow-x: hidden;
 }
 
 .header {
    padding: 10px 20px;
-   background:transparent;
+   background:rgba(128, 128, 128, 0.219);
 }
 .header h1 {
    font-size: 30px;
@@ -20,8 +21,28 @@ background-attachment: fixed; /* Keeps the image fixed while scrolling */
    color:#ffffff;
 
 }
+ .image{
+   display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        gap: 2px;
+        justify-content: center;
+   
+}
+.image img{
+   width: 400px; /* Set fixed width */
+            height: 200px; /* Set fixed height */
+            object-fit: cover;
+            transition: transform 0.3s ease-in-out;
+
+   
+}
+img:hover{
+   transform:scale(1.3);
+}
+
 header h1{
    color:#ff0000;
+   background-color: rgba(128, 128, 128, 0.356);
 }
 header h3{
    color:green; 
